--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <canvas id="worldCanvas"></canvas>
 <canvas id="mapCanvas"></canvas>
 
-<script src="./simulation.js" type="text/javascript"></script>
-<script src="./og_slam.js" type="text/javascript"></script>
+<script src="./script.js" type="text/javascript"></script>
 
 <noscript>Please enable JavaScript!</noscript>
 
