Add instructions to the HTML.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 <body>
 
+<h2>Occupancy Grid SLAM (Simultaneous Localization and Mapping)</h2>
+<p>
+	Instructions: Start, pause, and reset do exactly what you think (pressing start while paused will resume). New world resets and generates a new random field of obstacles.
+	<br>
+	Once you've started, use WASD to control the robot. You can also click and drag obstacles.
+	<br>
+	As long as the simulation isn't running, you can modify parameters and settings below.
+</p>
+
 <canvas id="worldCanvas"></canvas>
 <canvas id="mapCanvas"></canvas>
 
