--- a/index.html
+++ b/index.html
@@ -211,6 +211,51 @@
 
 			<tr><td>&nbsp;</td></tr>
 			<tr><th>Occupancy Grid Properties</th></tr>
+			<tr>
+				<td>Cell Size</td>
+				<td><textarea class="parameterForm" autocomplete="off" cols="5" rows="1" onkeyup="(function(elt){
+					if(Number(elt.value) > 0) {
+						cellWidth = Number(elt.value);
+						gridWidth = Math.ceil(worldWidth / cellWidth);
+						gridHeight = Math.ceil(worldHeight / cellWidth);
+						if(gridWidth % 2 == 0) {
+							++gridWidth;
+						}
+						if(gridHeight % 2 == 0) {
+							++gridHeight;
+						}
+						reset();
+					}
+				})(this)">0.1</textarea></td>
+				<td>The size of each occupancy grid cell, in meters. Must be greater than zero.</td>
+			</tr>
+			<tr>
+				<td>Occupancy Trust Factor</td>
+				<td><textarea class="parameterForm" autocomplete="off" cols="5" rows="1" onkeyup="(function(elt){
+					if(Number(elt.value) > 1) {
+						occupancyTrust = Number(elt.value);
+					}
+				})(this)">4</textarea></td>
+				<td>A factor affecting how much the occupancy grid trusts new observations. Must be greater than 1.</td>
+			</tr>
+			<tr>
+				<td>Minimum Log-Prop</td>
+				<td><textarea class="parameterForm" autocomplete="off" cols="9" rows="1" onkeyup="(function(elt){
+					if(Number(elt.value) < maxLog) {
+						minLog = Number(elt.value);
+					}
+				})(this)">-5</textarea></td>
+				<td>The minimum log-probability of each occupancy grid square. Can be any number, or set to "-Infinity" to disable. Must be less than the maximum log-probability.</td>
+			</tr>
+			<tr>
+				<td>Maximum Log-Prop</td>
+				<td><textarea class="parameterForm" autocomplete="off" cols="9" rows="1" onkeyup="(function(elt){
+					if(Number(elt.value) > minLog) {
+						maxLog = Number(elt.value);
+					}
+				})(this)">-5</textarea></td>
+				<td>The maximum log-probability of each occupancy grid square. Can be any number, or set to "Infinity" to disable. Must be greater than the minimum log-probability.</td>
+			</tr>
 
 			<tr><td>&nbsp;</td></tr>
 			<tr><th>Particle Filter Properties</th></tr>
