Update the instructions.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>
 	Instructions: Start, pause, and reset do exactly what you think (pressing start while paused will resume). New world resets and generates a new random field of obstacles.
 	<br>
-	Once you've started, use WASD to control the robot. You can also click and drag obstacles.
+	Once you've started, use WASD to control the robot. You can also click and drag obstacles. The blue path is the robot's actual path, and the green path is the estimated path.
 	<br>
 	As long as the simulation isn't running, you can modify parameters and settings below.
 </p>
